# dx12_framework

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Application.cpp.DE8416D4239DB784.idx  Application.h.93F6BE803429B121.idx  CommandQueue.cpp.0263052385D9AA36.idx  CommandQueue.h.C649957759AF2859.idx  DX12LibPCH.cpp.24357A02D3C6D4BD.idx  DX12LibPCH.h.335F44477CD61758.idx  Defines.h.5830C0A506D1C73C.idx  DescriptorAllocation.cpp.8D35E788BB172F76.idx  DescriptorAllocation.h.83A44A3660E0FABC.idx  DescriptorAllocator.cpp.FB90423C60BAC630.idx  DescriptorAllocator.h.C00A72B7A47E1353.idx  DescriptorAllocatorPage.cpp.1C4FCFE8F06BBFF5.idx  DescriptorAllocatorPage.h.A678C56E3C46E5D6.idx  Events.h.5DBE76BEF7F4B030.idx  Game.cpp.32CC2CF116A370B6.idx  Game.h.6A3B4E4DCC5272AA.idx  HighResolutionClock.cpp.7BE8B6721AAA7DE4.idx  HighResolutionClock.h.E0432BC7FFF951DA.idx  KeyCodes.h.B3FA1FAB12C313DF.idx  Tutorial2.cpp.6A7B9B0ABADB093A.idx  Tutorial2.h.0F641B4DE4B9C10B.idx  UploadBuffer.cpp.516915983D9C57F7.idx  UploadBuffer.h.BCCCAB5E517504B9.idx  Utility.cpp.0ACD2A71DCEFDC2E.idx  Utility.h.82CFBDABB0E1235A.idx  Window.cpp.C23591E28C358FEF.idx  Window.h.889EF0AACB589CD4.idx  d3dx12.h.A1B60C76D754727B.idx  main.cpp.5F08CBB39F6BB15C.idx  resource.h.1CBB3DBF09CE8C6A.idx
DX12Lib/: CMakeLists.txt
DX12Lib/inc/: Application.h  CommandQueue.h  DX12LibPCH.h  Defines.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  DynamicDescriptorHeap.h  Events.h  Game.h  HighResolutionClock.h  RootSignature.h  UploadBuffer.h  Utility.h  Window.h  d3dx12.h
DX12Lib/src/: Application.cpp  CommandQueue.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  DynamicDescriptorHeap.cpp  Game.cpp  HighResolutionClock.cpp  RootSignature.cpp  UploadBuffer.cpp  Utility.cpp  Window.cpp
Tutorial2/: CMakeLists.txt
Tutorial2/inc/: Tutorial2.h
Tutorial2/src/: Tutorial2.cpp  main.cpp
